--- a/front/src/_layouts/home.html
+++ b/front/src/_layouts/home.html
@@ -1,7 +1,7 @@
 {% include head.html %}
 
   <main role="main">
-    <div class="l__wrapper">
+    <div class="l__wrapper l--push-v-2">
       {{ content }}
     </div>
   </main>
