--- a/front/src/assets/sass/_components/_layout.scss
+++ b/front/src/assets/sass/_components/_layout.scss
@@ -37,6 +37,27 @@ $layout-spacing-sides        : top bottom left right           !default;
   @include pie-clearfix;
 }
 
+/*
+
+#### Floats
+
+<div class="#{$placeholder-el}block #{$layout-mod}float-left">
+  .#{$layout-mod}float-left
+</div>
+
+<div class="#{$placeholder-el}block #{$layout-mod}float-right">
+  .#{$layout-mod}float-right
+</div>
+
+*/
+
+.#{$layout-mod}float-left {
+  float: left;
+}
+
+.#{$layout-mod}float-right {
+  float: right;
+}
 
 /*
 
@@ -50,12 +71,12 @@ $max-site-width is assigned to this
   max-width: $layout-wrapper-max-width;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 $grid-padding / 4;
+  padding: 0 $grid-padding / 2;
   @include breakpoint($gte-medium) {
-    padding: 0 $grid-padding / 2;
+    padding: 0 $grid-padding;
   }
   @include breakpoint($gte-large) {
-    padding: 0 $grid-padding;
+    padding: 0 $grid-padding * 2;
   }
   @include no-mqueries {
     min-width: $layout-wrapper-min-ie-width; // ? Sets a min-width in ie so it doesn't get too squashed
@@ -107,28 +128,34 @@ Only use them if it does not make sense to add this styling to another element/c
 
 @each $i in  $layout-spacing-increments {
   @each $side in  $layout-spacing-sides {
-    .#{$layout-mod}push--#{$side}-#{$i} {
+    .#{$layout-mod}push-#{$side}-#{$i} {
       margin-#{$side}: rhythm($i) !important;
     }
-    .#{$layout-mod}pad--#{$side}-#{$i} {
+    .#{$layout-mod}pad-#{$side}-#{$i} {
       padding-#{$side}: rhythm($i) !important;
     }
   }
-  .#{$layout-mod}push--v-#{$i} {
+  .#{$layout-mod}push-v-#{$i} {
     margin-top: rhythm($i) !important;
     margin-bottom: rhythm($i) !important;
   }
-  .#{$layout-mod}pad--v-#{$i} {
+  .#{$layout-mod}pad-v-#{$i} {
     padding-top: rhythm($i) !important;
     padding-bottom: rhythm($i) !important;
   }
-  .#{$layout-mod}push--h-#{$i} {
+  .#{$layout-mod}push-h-#{$i} {
     margin-left: rhythm($i) !important;
     margin-right: rhythm($i) !important;
   }
-  .#{$layout-mod}pad--h-#{$i} {
+  .#{$layout-mod}pad-h-#{$i} {
     padding-left: rhythm($i) !important;
     padding-right: rhythm($i) !important;
+  }
+  .#{$layout-mod}push-all-#{$i} {
+    margin: rhythm($i) !important;
+  }
+  .#{$layout-mod}pad-all-#{$i} {
+    padding: rhythm($i) !important;
   }
 }
 
