--- a/front/src/assets/sass/style.scss
+++ b/front/src/assets/sass/style.scss
@@ -66,3 +66,8 @@ These are components that can be utilised or are depended on by other components
 @import "_components/lists";
 @import "_components/forms";
 @import "_components/emphasis";
+@import "_components/off-canvas";
+@import "_components/comments";
+@import "_components/cards";
+
+@import "_components/header";
