--- a/front/src/assets/sass/_components/_header.scss
+++ b/front/src/assets/sass/_components/_header.scss
@@ -1,10 +1,19 @@
 .header {
   background-color: lighten($color-bg, 3%);
+
 }
 
 .header__title {
-  text-align: center;
+  font-weight: 300;
+  padding: rhythm(.5, 30px) 0;
+  @include adjust-font-size-to(30px);
   a {
     color: $color-base-font;
   }
+}
+
+.header__logo {
+  height: rhythm(2);
+  width: rhythm(2);
+  padding: rhythm(.25) 0 0;
 }
