--- a/front/src/assets/sass/_components/_layout.scss
+++ b/front/src/assets/sass/_components/_layout.scss
@@ -68,6 +68,7 @@ $max-site-width is assigned to this
 */
 
 .#{$layout-el}wrapper {
+  @extend .l--clearfix;
   max-width: $layout-wrapper-max-width;
   margin-left: auto;
   margin-right: auto;
