--- a/front/src/assets/sass/_components/_comments.scss
+++ b/front/src/assets/sass/_components/_comments.scss
@@ -4,12 +4,9 @@ $comment-color-bg: lighten($color-bg, 3%);
   font-weight: 300;
   font-style: italic;
   @include opacity(.8);
-  @include adjust-font-size-to(12px);
-  @include breakpoint($gte-medium) {
-    @include adjust-font-size-to(14px);
-  }
-  @include breakpoint($gte-large) {
-    @include adjust-font-size-to(16px);
+  @include adjust-font-size-to(14px, 1.1);
+  @include breakpoint($gte-huge) {
+    @include adjust-font-size-to(16px, 1.2);
   }
   p:last-child {
     margin-bottom: 0;
@@ -28,7 +25,7 @@ $comment-color-bg: lighten($color-bg, 3%);
     top: rhythm(.6, 30px);
     left: rhythm(.5, 30px);
     font-weight: 700;
-    @include opacity(.5);
+    @include opacity(.2);
     @include adjust-font-size-to(30px);
   }
   &:after {
