--- a/front/src/assets/sass/_components/_header.scss
+++ b/front/src/assets/sass/_components/_header.scss
@@ -5,8 +5,11 @@
 
 .header__title {
   font-weight: 300;
-  padding: rhythm(.5, 30px) 0;
+  padding: rhythm(1, 30px) 0;
   @include adjust-font-size-to(30px);
+  @include breakpoint($gte-large) {
+    @include adjust-font-size-to(36px);
+  }
   a {
     color: $color-base-font;
   }
@@ -15,5 +18,9 @@
 .header__logo {
   height: rhythm(2);
   width: rhythm(2);
-  padding: rhythm(.25) 0 0;
+  padding: rhythm(.7) 0 0;
+  @include breakpoint($gte-large) {
+    height: rhythm(3);
+    width: rhythm(3);
+  }
 }
