--- a/front/src/assets/sass/style.scss
+++ b/front/src/assets/sass/style.scss
@@ -69,5 +69,6 @@ These are components that can be utilised or are depended on by other components
 @import "_components/off-canvas";
 @import "_components/comments";
 @import "_components/cards";
+@import "_components/media";
 
 @import "_components/header";
