--- a/front/src/assets/sass/_components/_text.scss
+++ b/front/src/assets/sass/_components/_text.scss
@@ -43,6 +43,19 @@ $text-mod    : #{$text-prefix}#{$mod};
   text-align: right;
 }
 
+
+.#{$text-mod}meta {
+  @include opacity(.5);
+  @include transition($default-transition);
+  @include adjust-font-size-to(12px);
+  @include rgba-background(rgba($black, .05));
+  padding: rhythm(.125, 12px) rhythm(.25, 12px);
+  margin-bottom: rhythm(.5, 12px);
+  &:hover {
+    @include opacity(1);
+  }
+}
+
 .#{$text-mod}align-center {
   text-align: center;
 }
