--- a/front/src/assets/sass/_components/_forms.scss
+++ b/front/src/assets/sass/_components/_forms.scss
@@ -1,5 +1,5 @@
 .form--story {
-
+  cursor: default;
 }
 
 // TODO: add form selection
@@ -27,5 +27,36 @@ input[type=text].form--story__button,
   @include transition($default-transition);
   &:hover {
     color: $color-link-hover;
+  }
+}
+
+.form--story__radio {
+
+}
+
+.form--story__radio__divider {
+  @include opacity(.4);
+}
+
+.form--story__radio__label {
+  @include opacity(.4);
+  text-decoration: line-through;
+  cursor: pointer;
+  z-index: 0;
+}
+
+.form--story__radio__item {
+  position: relative;
+  input[type="radio"] {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    @include opacity(0);
+    z-index: 1;
+    &:checked ~ .form--story__radio__label {
+      @include opacity(1);
+      text-decoration: none;
+    }
   }
 }
