Basic form and grunt integration

--- a/webapp/webapp/templates/common/layout.jinja2
+++ b/webapp/webapp/templates/common/layout.jinja2
@@ -69,10 +69,10 @@
 
         <h1 class="beta header__title l--float-left"><a href="/">BrisBert</a></h1>
 
-        <div class="l--float-right header__logo"><a href="#off-canvas--right" class="off-canvas__toggle"><img src="assets/img/logo.svg" alt="BrisBert Logo"></a></div>
+        <div class="l--float-right header__logo"><a href="#off-canvas--right" class="off-canvas__toggle"><img src="/assets/img/logo.svg" alt="BrisBert Logo"></a></div>
       </div>
     </header>
-  
+
     {% block content %}{% endblock %}
 
     <footer role="contentinfo" class="l--push--v-2">
