--- a/front/src/assets/sass/_components/_forms.scss
+++ b/front/src/assets/sass/_components/_forms.scss
@@ -18,7 +18,8 @@ input[type=text].form--story__text {
 }
 
 input[type=text].form--story__button,
-.form--story__button {
+.form--story__button
+button.form--story__button {
   background: transparent;
   border: none;
   padding: 0;
