--- a/webapp/webapp/assets/css-sg/style.css
+++ b/webapp/webapp/assets/css-sg/style.css
@@ -2064,6 +2064,25 @@ Centered grids align grid items centrally without needing to use push or pull cl
   text-align: right;
 }
 
+.text--meta {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  opacity: 0.5;
+  -webkit-transition: 0.2s ease-out;
+  -moz-transition: 0.2s ease-out;
+  -o-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+  font-size: 0.75em;
+  line-height: 2em;
+  background: url('/img/rgbapng/0000000d.png?1370088420');
+  background: rgba(0, 0, 0, 0.05);
+  padding: 0.25em 0.5em;
+  margin-bottom: 1em;
+}
+.text--meta:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
 .text--align-center {
   text-align: center;
 }
@@ -2239,6 +2258,10 @@ nav ol li, .list--horizontal li, .list--slat li {
   line-height: 1.5em;
 }
 
+.form--story {
+  cursor: default;
+}
+
 input[type=text].form--story__text {
   background: transparent;
   border: none;
@@ -2274,6 +2297,37 @@ input[type=text].form--story__button,
 input[type=text].form--story__button:hover,
 .form--story__button:hover {
   color: #034659;
+}
+
+.form--story__radio__divider {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+  opacity: 0.4;
+}
+
+.form--story__radio__label {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+  opacity: 0.4;
+  text-decoration: line-through;
+  cursor: pointer;
+  z-index: 0;
+}
+
+.form--story__radio__item {
+  position: relative;
+}
+.form--story__radio__item input[type="radio"] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  z-index: 1;
+}
+.form--story__radio__item input[type="radio"]:checked ~ .form--story__radio__label {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+  text-decoration: none;
 }
 
 .emphasis--more, .emphasis--more-pop {
@@ -2330,21 +2384,11 @@ input[type=text].form--story__button:hover,
 }
 
 .off-canvas__toggle, .off-canvas__toggle--left, .off-canvas__toggle--right, .off-canvas__close {
-  font-size: 1.5em;
-  line-height: 1em;
-  display: -moz-inline-stack;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
-  zoom: 1;
-  *display: inline;
-  padding: 0.5em;
-  text-align: center;
-  height: 2em;
-  width: 2em;
+  display: block;
 }
 .off-canvas__toggle.is-active, .is-active.off-canvas__toggle--left, .is-active.off-canvas__toggle--right, .is-active.off-canvas__close {
-  color: #333333;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  opacity: 0.5;
 }
 
 .off-canvas__toggle--left {
@@ -2364,6 +2408,19 @@ input[type=text].form--story__button:hover,
 }
 [data-off-canvas=over] .off-canvas__header {
   background-color: white;
+}
+
+.off-canvas__header__title {
+  font-size: 1em;
+  line-height: 3em;
+  color: #f5e3bc;
+  display: -moz-inline-stack;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  zoom: 1;
+  *display: inline;
+  padding-left: 0.75em;
 }
 
 .off-canvas--left, .off-canvas--right {
@@ -2387,6 +2444,15 @@ input[type=text].form--story__button:hover,
   -moz-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   z-index: 2;
+}
+[data-off-canvas=under].off-canvas--left, [data-off-canvas=under].off-canvas--right {
+  color: #fbf5e8;
+}
+
+.off-canvas__target__body {
+  font-size: 0.75em;
+  line-height: 2em;
+  padding: 1em;
 }
 
 .off-canvas--left[data-off-canvas=over] {
@@ -2483,7 +2549,7 @@ input[type=text].form--story__button:hover,
   color: white;
 }
 
-.comment, .comment--large {
+.comment {
   font-weight: 300;
   font-style: italic;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
@@ -2492,34 +2558,34 @@ input[type=text].form--story__button:hover,
   line-height: 1.88571em;
 }
 @media (min-width: 62.5em) {
-  .comment, .comment--large {
+  .comment {
     font-size: 1em;
     line-height: 1.8em;
   }
 }
-.comment p:last-child, .comment--large p:last-child {
+.comment p:last-child {
   margin-bottom: 0;
 }
 
-.comment--large {
-  font-size: 1.25em;
-  line-height: 1.2em;
+.comment--medium, .comment--large {
+  font-weight: 300;
+  font-style: italic;
   position: relative;
-  padding: 1.2em 1.2em 1.2em 2.4em;
+  padding: 1.5em 1.5em 1.5em 3em;
   background-color: white;
 }
-.comment--large:before {
+.comment--medium:before, .comment--large:before {
   content: "\201C";
   position: absolute;
-  top: 0.48em;
-  left: 0.4em;
+  top: 0.68em;
+  left: 0.5em;
   font-weight: 700;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
   opacity: 0.2;
-  font-size: 1.875em;
-  line-height: 1.2em;
+  font-size: 2.5em;
+  line-height: 0.9em;
 }
-.comment--large:after {
+.comment--medium:after, .comment--large:after {
   content: "";
   width: 0px;
   height: 0px;
@@ -2533,9 +2599,36 @@ input[type=text].form--story__button:hover,
   border-color: transparent transparent transparent white;
 }
 @media (min-width: 35em) {
-  .comment--large:after {
+  .comment--medium:after, .comment--large:after {
     right: -28px;
   }
+}
+@media (min-width: 35em) {
+  .comment--medium, .comment--large {
+    padding: 1.33333em 1.33333em 1.33333em 4em;
+  }
+}
+@media (min-width: 50em) {
+  .comment--medium, .comment--large {
+    padding: 1.2em 1.2em 1.2em 3.6em;
+  }
+}
+.comment--medium p:last-child, .comment--large p:last-child {
+  margin-bottom: 0;
+}
+
+.comment--large {
+  font-size: 1.25em;
+  line-height: 1.2em;
+  padding: 1.2em 1.2em 1.2em 2.4em;
+}
+.comment--large:before {
+  top: 0.48em;
+  left: 0.4em;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
+  opacity: 0.2;
+  font-size: 1.875em;
+  line-height: 1.2em;
 }
 @media (min-width: 35em) {
   .comment--large {
@@ -2557,6 +2650,7 @@ input[type=text].form--story__button:hover,
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
 .card__image {
@@ -2571,6 +2665,13 @@ input[type=text].form--story__button:hover,
   top: 0;
   left: 0;
   width: 100%;
+}
+@media (min-width: 50em) {
+  .card__image {
+    overflow: visible;
+    height: auto;
+    padding: 0;
+  }
 }
 
 .card__text p:last-child {
