--- a/front/src/assets/sass/_settings/_settings.scss
+++ b/front/src/assets/sass/_settings/_settings.scss
@@ -70,7 +70,8 @@ $color-secondary                   : #ECBE13;
 $color-tertiary                    : #F2DCAA;
 $color-base-font                   : #333;
 $color-base-heading                : $color-base-font;
-$color-bg                          : lighten($color-tertiary, 14%);
+$color-bg                          : #000;
+$color-bg-light                    : lighten($color-tertiary, 14%);
 $color-link                        : $color-primary;
 $color-link-hover                  : darken($color-link, 15);
 $color-link-active                 : darken($color-link, 40);
@@ -143,7 +144,7 @@ $breakpoint-base-font-size         : false;
 $breakpoint-small                  : 0;
 $breakpoint-medium                 : 560px;
 $breakpoint-large                  : 800px;
-$breakpoint-huge                   : 1000px;
+$breakpoint-huge                   : 880px;
 $breakpoint-hi-res                 : 2 device-pixel-ratio;
 $breakpoint-portrait               : orientation portrait;
 $breakpoint-landscape              : orientation landscape;
@@ -210,7 +211,7 @@ $form-legend-weight                : bold;
 $layout-prefix                     : "l";
 $layout-mod                        : "#{$layout-prefix}#{$mod}";
 $layout-el                         : "#{$layout-prefix}#{$el}";
-$layout-wrapper-max-width          : 64em;
+$layout-wrapper-max-width          : 52em;
 $layout-wrapper-min-ie-width       : 50em; // NOTE: old ie only
 $layout-spacing-increments         : 0 1 2;
 $layout-spacing-sides              : top bottom left right;
