--- a/front/src/assets/css-sg/style.css
+++ b/front/src/assets/css-sg/style.css
@@ -195,7 +195,7 @@ html {
 
 body {
   margin: 0;
-  background: #fbf5e8;
+  background: black;
   -webkit-overflow-scroll: touch;
 }
 
@@ -919,7 +919,7 @@ $max-site-width is assigned to this
 
 */
 .l__wrapper {
-  max-width: 64em;
+  max-width: 52em;
   margin-left: auto;
   margin-right: auto;
   padding: 0 1.5em;
@@ -929,7 +929,7 @@ $max-site-width is assigned to this
     padding: 0 3em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
   .l__wrapper {
     padding: 0 6em;
   }
@@ -1361,7 +1361,7 @@ Only use them if it does not make sense to add this styling to another element/c
     margin-left: -1.5em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
   .g, .g--tight, .g--collapsed, .g--rev, .g--right, .g--centered {
     margin-left: -3em;
   }
@@ -1391,7 +1391,7 @@ Only use them if it does not make sense to add this styling to another element/c
     padding-left: 1.5em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
   .g__item {
     padding-left: 3em;
   }
@@ -1421,7 +1421,7 @@ Tight grids have all the properties of regular grids, minus any spacing.
     margin-left: -0.75em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
   .g--tight {
     margin-left: -1.5em;
   }
@@ -1434,7 +1434,7 @@ Tight grids have all the properties of regular grids, minus any spacing.
     padding-left: 0.75em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
   .g--tight > .g__item {
     padding-left: 1.5em;
   }
@@ -1821,7 +1821,7 @@ Centered grids align grid items centrally without needing to use push or pull cl
     width: 91.666%;
   }
 }
-@media (min-width: 50em) and (max-width: 62.4375em) {
+@media (min-width: 50em) and (max-width: 54.9375em) {
   .w--l-one-whole {
     width: 100%;
   }
@@ -1918,7 +1918,7 @@ Centered grids align grid items centrally without needing to use push or pull cl
     width: 91.666%;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
   .w--h-one-whole {
     width: 100%;
   }
@@ -2333,7 +2333,11 @@ button.form--story__button:hover {
 }
 
 .emphasis--more, .emphasis--more-pop {
-  background-color: white;
+  background-color: #fbf5e8;
+}
+
+.emphasis--more-small {
+  background-color: #fefbf5;
 }
 
 .emphasis--more-pop {
@@ -2343,7 +2347,7 @@ button.form--story__button:hover {
 }
 
 .emphasis--less {
-  background-color: #f8ecd2;
+  background-color: black;
 }
 
 .off-canvas__outer {
@@ -2358,7 +2362,7 @@ button.form--story__button:hover {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: #fbf5e8;
+  background-color: black;
   -webkit-transition: 0.2s ease-out;
   -moz-transition: 0.2s ease-out;
   -o-transition: 0.2s ease-out;
@@ -2409,13 +2413,13 @@ button.form--story__button:hover {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 [data-off-canvas=over] .off-canvas__header {
-  background-color: white;
+  background-color: #1a1a1a;
 }
 
 .off-canvas__header__title {
   font-size: 1em;
   line-height: 3em;
-  color: #f5e3bc;
+  color: black;
   display: -moz-inline-stack;
   display: inline-block;
   vertical-align: middle;
@@ -2448,7 +2452,7 @@ button.form--story__button:hover {
   z-index: 2;
 }
 [data-off-canvas=under].off-canvas--left, [data-off-canvas=under].off-canvas--right {
-  color: #fbf5e8;
+  color: black;
 }
 
 .off-canvas__target__body {
@@ -2510,7 +2514,7 @@ button.form--story__button:hover {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
   .no-csstransforms3d .off-canvas--right-under .off-canvas--right {
     right: 16.5em;
   }
@@ -2543,12 +2547,12 @@ button.form--story__button:hover {
   float: left;
 }
 [data-off-canvas=over] .off-canvas__close {
-  background-color: #f7e9c9;
-  color: #fffffe;
+  background-color: black;
+  color: #0d0d0d;
 }
 [data-off-canvas=over] .off-canvas__close:hover {
-  background-color: #f1daa6;
-  color: white;
+  background-color: black;
+  color: #1a1a1a;
 }
 
 .comment {
@@ -2559,7 +2563,7 @@ button.form--story__button:hover {
   font-size: 0.875em;
   line-height: 1.88571em;
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
   .comment {
     font-size: 1em;
     line-height: 1.8em;
