--- a/webapp/webapp/assets/css/style-old-ie.css
+++ b/webapp/webapp/assets/css/style-old-ie.css
@@ -186,7 +186,7 @@ html {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_elements\/_global\.scss}line{font-family:\0000352}}
 body {
   margin: 0;
-  background: #fbf5e8;
+  background: black;
   -webkit-overflow-scroll: touch;
 }
 
@@ -977,7 +977,7 @@ $max-site-width is assigned to this
 */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_layout\.scss}line{font-family:\0000370}}
 .l__wrapper {
-  max-width: 64em;
+  max-width: 52em;
   margin-left: auto;
   margin-right: auto;
   padding: 0 1.5em;
@@ -1948,19 +1948,24 @@ button.form--story__button:hover {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000311}}
 .emphasis--more, .emphasis--more-pop {
-  background-color: white;
+  background-color: #fbf5e8;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000315}}
+.emphasis--more-small {
+  background-color: #fefbf5;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000319}}
 .emphasis--more-pop {
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000320}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000324}}
 .emphasis--less {
-  background-color: #f8ecd2;
+  background-color: black;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000310}}
@@ -1977,7 +1982,7 @@ button.form--story__button:hover {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: #fbf5e8;
+  background-color: black;
   -webkit-transition: 0.2s ease-out;
   -moz-transition: 0.2s ease-out;
   -o-transition: 0.2s ease-out;
@@ -2038,14 +2043,14 @@ button.form--story__button:hover {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000368}}
 [data-off-canvas=over] .off-canvas__header {
-  background-color: white;
+  background-color: #1a1a1a;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000373}}
 .off-canvas__header__title {
   font-size: 1em;
   line-height: 3em;
-  color: #f5e3bc;
+  color: black;
   display: -moz-inline-stack;
   display: inline-block;
   vertical-align: middle;
@@ -2081,7 +2086,7 @@ button.form--story__button:hover {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000394}}
 [data-off-canvas=under].off-canvas--left, [data-off-canvas=under].off-canvas--right {
-  color: #fbf5e8;
+  color: black;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000399}}
@@ -2181,13 +2186,13 @@ button.form--story__button:hover {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\00003178}}
 [data-off-canvas=over] .off-canvas__close {
-  background-color: #f7e9c9;
-  color: #fffffe;
+  background-color: black;
+  color: #0d0d0d;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\00003181}}
 [data-off-canvas=over] .off-canvas__close:hover {
-  background-color: #f1daa6;
-  color: white;
+  background-color: black;
+  color: #1a1a1a;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_comments\.scss}line{font-family:\000033}}
