--- a/webapp/webapp/assets/css/style.css
+++ b/webapp/webapp/assets/css/style.css
@@ -222,7 +222,7 @@ html {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_elements\/_global\.scss}line{font-family:\0000352}}
 body {
   margin: 0;
-  background: #fbf5e8;
+  background: black;
   -webkit-overflow-scroll: touch;
 }
 
@@ -1020,7 +1020,7 @@ $max-site-width is assigned to this
 */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_layout\.scss}line{font-family:\0000370}}
 .l__wrapper {
-  max-width: 64em;
+  max-width: 52em;
   margin-left: auto;
   margin-right: auto;
   padding: 0 1.5em;
@@ -1031,7 +1031,7 @@ $max-site-width is assigned to this
     padding: 0 3em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_layout\.scss}line{font-family:\0000370}}
   .l__wrapper {
     padding: 0 6em;
@@ -1508,7 +1508,7 @@ Only use them if it does not make sense to add this styling to another element/c
     margin-left: -1.5em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_grid\.scss}line{font-family:\0000347}}
   .g, .g--tight, .g--collapsed, .g--rev, .g--right, .g--centered {
     margin-left: -3em;
@@ -1543,7 +1543,7 @@ Only use them if it does not make sense to add this styling to another element/c
     padding-left: 1.5em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_grid\.scss}line{font-family:\0000370}}
   .g__item {
     padding-left: 3em;
@@ -1576,7 +1576,7 @@ Tight grids have all the properties of regular grids, minus any spacing.
     margin-left: -0.75em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_grid\.scss}line{font-family:\00003105}}
   .g--tight {
     margin-left: -1.5em;
@@ -1592,7 +1592,7 @@ Tight grids have all the properties of regular grids, minus any spacing.
     padding-left: 0.75em;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_grid\.scss}line{font-family:\00003114}}
   .g--tight > .g__item {
     padding-left: 1.5em;
@@ -2060,7 +2060,7 @@ Centered grids align grid items centrally without needing to use push or pull cl
     width: 91.666%;
   }
 }
-@media (min-width: 50em) and (max-width: 62.4375em) {
+@media (min-width: 50em) and (max-width: 54.9375em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_widths\.scss}line{font-family:\0000312}}
   .w--l-one-whole {
     width: 100%;
@@ -2181,7 +2181,7 @@ Centered grids align grid items centrally without needing to use push or pull cl
     width: 91.666%;
   }
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_widths\.scss}line{font-family:\0000312}}
   .w--h-one-whole {
     width: 100%;
@@ -2655,19 +2655,24 @@ button.form--story__button:hover {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000311}}
 .emphasis--more, .emphasis--more-pop {
-  background-color: white;
+  background-color: #fbf5e8;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000315}}
+.emphasis--more-small {
+  background-color: #fefbf5;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000319}}
 .emphasis--more-pop {
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000320}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_emphasis\.scss}line{font-family:\0000324}}
 .emphasis--less {
-  background-color: #f8ecd2;
+  background-color: black;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000310}}
@@ -2684,7 +2689,7 @@ button.form--story__button:hover {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: #fbf5e8;
+  background-color: black;
   -webkit-transition: 0.2s ease-out;
   -moz-transition: 0.2s ease-out;
   -o-transition: 0.2s ease-out;
@@ -2745,14 +2750,14 @@ button.form--story__button:hover {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000368}}
 [data-off-canvas=over] .off-canvas__header {
-  background-color: white;
+  background-color: #1a1a1a;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000373}}
 .off-canvas__header__title {
   font-size: 1em;
   line-height: 3em;
-  color: #f5e3bc;
+  color: black;
   display: -moz-inline-stack;
   display: inline-block;
   vertical-align: middle;
@@ -2788,7 +2793,7 @@ button.form--story__button:hover {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000394}}
 [data-off-canvas=under].off-canvas--left, [data-off-canvas=under].off-canvas--right {
-  color: #fbf5e8;
+  color: black;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\0000399}}
@@ -2863,7 +2868,7 @@ button.form--story__button:hover {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\00003150}}
   .no-csstransforms3d .off-canvas--right-under .off-canvas--right {
     right: 16.5em;
@@ -2902,13 +2907,13 @@ button.form--story__button:hover {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\00003178}}
 [data-off-canvas=over] .off-canvas__close {
-  background-color: #f7e9c9;
-  color: #fffffe;
+  background-color: black;
+  color: #0d0d0d;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_off-canvas\.scss}line{font-family:\00003181}}
 [data-off-canvas=over] .off-canvas__close:hover {
-  background-color: #f1daa6;
-  color: white;
+  background-color: black;
+  color: #1a1a1a;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_comments\.scss}line{font-family:\000033}}
@@ -2920,7 +2925,7 @@ button.form--story__button:hover {
   font-size: 0.875em;
   line-height: 1.88571em;
 }
-@media (min-width: 62.5em) {
+@media (min-width: 55em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/lukebrooker\/Sites\/brisbert\/front\/src\/assets\/sass\/_components\/_comments\.scss}line{font-family:\000033}}
   .comment {
     font-size: 1em;
