--- a/front/src/assets/sass/_components/_off-canvas.scss
+++ b/front/src/assets/sass/_components/_off-canvas.scss
@@ -11,6 +11,7 @@ $offcanvas-target-width   : 11 !default;
   position: relative;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
   background-color: $offcanvas-outer-bg-color;
 }
 
