--- a/front/src/assets/css-sg/style.css
+++ b/front/src/assets/css-sg/style.css
@@ -2713,13 +2713,11 @@ button.form--story__button:hover {
 }
 
 .header__logo {
-  height: 3em;
-  width: 3em;
-  padding: 1.05em 0 0;
+  max-width: 6em;
+  padding: 1.125em 0 0.375em;
 }
-@media (min-width: 50em) {
+@media (min-width: 55em) {
   .header__logo {
-    height: 4.5em;
-    width: 4.5em;
+    max-width: 7.5em;
   }
 }
