--- a/webapp/webapp/templates/common/layout.jinja2
+++ b/webapp/webapp/templates/common/layout.jinja2
@@ -69,8 +69,7 @@
 
         <!-- <a href="#off-canvas--left" class="off-canvas__toggle--left  l--float-left">Menu</a> -->
         <a href="/" class="l--float-left">
-          <div class="header__logo"><img src="/assets/img/logo.svg" alt="BrisBert Logo"></div>
-          <h1 class="delta header__title">BrisBert</h1>
+          <div class="header__logo"><img src="/assets/img/logo.svg" alt="BrisBert"></div>
         </a>
 
     </header>
